--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,3 +122,24 @@ section {
   padding: 0.5em;
 }
 
+aside {
+    width: 95%;
+    margin: 0 auto;
+}
+
+aside img {
+    width: 97%;
+    align-self: center;
+}
+
+aside div {
+    font-size: 1.5em;
+    border-radius: 50px;
+    display: flex;
+    flex-direction: column;
+    padding: 1.5em;
+}
+
+aside h3 {
+    margin: 0;
+}
